--- a/index.html
+++ b/index.html
@@ -1,84 +1,186 @@
 <!DOCTYPE html>
-<html lang="he">
+<html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>טמפרטורה במקררים</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>טמפרטורה במקררים (1–19)</title>
   <style>
-    body { font-family: sans-serif; direction: rtl; }
-    table { width: 100%; border-collapse: collapse; margin-top: 1em; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
-    .alarm { background-color: #ffcccc; color: #900; font-weight: bold; }
-    .normal { background-color: #ccffcc; color: #060; }
+    :root { --ok:#0a7b0a; --warn:#b88700; --bad:#b00020; }
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji"; margin: 16px; }
+    h2 { margin: 0 0 8px; }
+    .controls { display: flex; gap: 12px; align-items: center; flex-wrap: wrap; }
+    .pill { padding: 4px 10px; border-radius: 999px; background:#f1f5f9; font-size: 12px; }
+    table { width: 100%; border-collapse: collapse; margin-top: 10px; }
+    th, td { border-bottom: 1px solid #e5e7eb; padding: 10px; text-align: center; }
+    th { background: #f8fafc; position: sticky; top: 0; z-index: 1; }
+    tr.ok { background: #ecfdf5; }
+    tr.alarm { background: #fef2f2; }
+    tr.sensor { background: #fff7ed; }
+    .tag { font-weight: 600; }
+    .tag.ok { color: var(--ok); }
+    .tag.alarm { color: var(--bad); }
+    .tag.sensor { color: var(--warn); }
+    footer { margin-top: 16px; font-size: 12px; color:#64748b; text-align: center; }
   </style>
 </head>
 <body>
   <h2>טמפרטורה במקררים (1–19)</h2>
-  <table id="fridgeTable">
+  <div class="controls">
+    <span id="lastUpdate" class="pill">—</span>
+    <span class="pill">רף מקרר: 9°C↑ = Alarm</span>
+    <span class="pill">רף מקפיא: −1°C↑ = Alarm</span>
+    <span class="pill">Alarm רק אם > 30 דק'</span>
+  </div>
+
+  <table id="fridgeTable" aria-label="Fridge temperatures">
     <thead>
-      <tr><th>#</th><th>שם</th><th>טמפרטורה</th><th>סטטוס</th></tr>
+      <tr>
+        <th style="width:72px">#</th>
+        <th>שם</th>
+        <th style="width:120px">טמפרטורה</th>
+        <th style="width:120px">סטטוס</th>
+        <th style="width:180px">משך עלייה (דקות)</th>
+      </tr>
     </thead>
     <tbody></tbody>
   </table>
 
+  <footer id="release"></footer>
+
   <script>
-    const history = {}; // для хранения истории температур
+    // ===================== CONFIG =====================
+    // IMPORTANT: replace DATA_URL with your HTTPS proxy endpoint
+    // (Cloudflare Worker / Vercel examples are in the chat)
+    var DATA_URL = "__SET_ME__/status"; // e.g. https://your-worker.workers.dev/status
+    var POLL_MS = 60000;          // refresh every 60s
+    var HISTORY_MINUTES = 48 * 60; // keep 48h in localStorage
+    var ALARM_FRIDGE = 9;         // >9°C for fridges
+    var ALARM_FREEZER = -1;       // >-1°C for freezers
+    var ALARM_WINDOW_MIN = 30;    // alarm if sustained >= 30 min
+    var IGNORE_SPIKES_MIN = 10;   // ignore spikes < 10 min
 
-    function isFreezer(name) {
-      return name.includes("מקפיא") || name.toLowerCase().includes("freezer");
+    var LS_KEY = "fridge_history_v2";
+
+    function isFreezer(name){ return /מקפ|freez/i.test(name || ""); }
+
+    function loadHistory(){
+      try { return JSON.parse(localStorage.getItem(LS_KEY) || "{}"); } catch (e) { return {}; }
+    }
+    function saveHistory(h){ localStorage.setItem(LS_KEY, JSON.stringify(h)); }
+
+    function trimHistory(h){
+      var cutoff = Date.now() - HISTORY_MINUTES * 60000;
+      Object.keys(h).forEach(function(id){
+        h[id] = (h[id] || []).filter(function(e){ return e.t >= cutoff; });
+        if (!h[id].length) delete h[id];
+      });
+      return h;
     }
 
-    function determineStatus(name, temp, id) {
-      const now = Date.now();
-      const threshold = isFreezer(name) ? -1 : 9;
-      const alarm = parseFloat(temp) > threshold;
-
-      if (!history[id]) history[id] = [];
-      history[id].push({ time: now, temp: parseFloat(temp), alarm });
-
-      // оставим только записи за последние 60 минут
-      history[id] = history[id].filter(e => now - e.time < 60 * 60 * 1000);
-
-      // если тревожное значение держится более 30 минут
-      const alarmPeriods = history[id].filter(e => e.alarm);
-      const firstAlarm = alarmPeriods[0]?.time;
-      const longEnough = firstAlarm && (now - firstAlarm > 30 * 60 * 1000);
-
-      return alarm && longEnough ? "alarm" : "normal";
+    function sustainedAlarmMinutes(series, threshold){
+      var minutes = 0;
+      for (var i = series.length - 1; i >= 0; i--) {
+        var v = series[i].v, t = series[i].t;
+        if (v == null || isNaN(v)) return Infinity; // sensor error -> treat as alarm
+        if (v > threshold) {
+          var prevT = i > 0 ? series[i-1].t : t;
+          minutes += Math.max(1, Math.round((t - prevT)/60000));
+        } else { break; }
+      }
+      return minutes;
     }
 
-    async function fetchData() {
-      const response = await fetch("http://109.67.166.227:82/cgi-bin/cgi.cgi?Status");
-      const text = await response.text();
-      const parser = new DOMParser();
-      const xml = parser.parseFromString(text, "application/xml");
-
-      const table = document.querySelector("#fridgeTable tbody");
-      table.innerHTML = "";
-
-      const items = xml.querySelectorAll("u");
-      for (let i = 0; i < items.length; i += 6) {
-        const id = items[i]?.textContent;
-        const name = items[i+1]?.textContent;
-        const temp = items[i+2]?.textContent;
-
-        if (!id || parseInt(id) > 19) continue;
-
-        const status = determineStatus(name, temp, id);
-
-        const row = document.createElement("tr");
-        row.className = status;
-        row.innerHTML = `
-          <td>${id}</td>
-          <td>${name}</td>
-          <td>${temp}</td>
-          <td>${status === "alarm" ? "🔴 Alarm" : "✅ Normal"}</td>
-        `;
-        table.appendChild(row);
+    function upsertReading(hist, id, value){
+      var t = Date.now();
+      if (!hist[id]) hist[id] = [];
+      hist[id].push({ v: value, t: t });
+      var arr = hist[id];
+      if (arr.length >= 2 && Math.abs(arr[arr.length-1].t - arr[arr.length-2].t) < 50000) {
+        arr.splice(arr.length-2, 1);
       }
     }
 
-    fetchData();
-    setInterval(fetchData, 60000); // обновление каждые 60 секунд
+    function parseXMLToRecords(xmlDoc){
+      var map = {};
+      var nodes = xmlDoc.querySelectorAll('u');
+      nodes.forEach(function(node){
+        var iAttr = node.getAttribute('i') || "";
+        var m = iAttr.match(/list\_(\d+)/);
+        if (!m) return;
+        map[Number(m[1])] = (node.textContent || "").trim();
+      });
+
+      var records = [];
+      var keys = Object.keys(map).map(Number).sort(function(a,b){ return a-b; });
+      for (var idx = 0; idx < keys.length; idx++) {
+        var base = keys[idx];
+        if (base % 6 !== 0) continue; // only starts at multiples of 6
+        var idRaw = map[base];
+        var name = map[base+1];
+        var tempRaw = map[base+2];
+        if (!idRaw || !name) continue;
+        var idForFilter = parseInt(String(idRaw), 10);
+        if (!(idForFilter >= 1 && idForFilter <= 19)) continue;
+        var temp = Number(String(tempRaw).replace(",", "."));
+        records.push({ id: String(idRaw), name: name, temp: isFinite(temp) ? temp : null });
+      }
+      return records;
+    }
+
+    function formatTemp(v){
+      if (v == null) return "—";
+      return v.toFixed(1) + "°C";
+    }
+
+    function render(rows, hist){
+      var tbody = document.querySelector('#fridgeTable tbody');
+      tbody.innerHTML = '';
+      rows.forEach(function(r){
+        var thr = isFreezer(r.name) ? ALARM_FREEZER : ALARM_FRIDGE;
+        var minutes = sustainedAlarmMinutes(hist[r.id] || [], thr);
+        var isAlarm = minutes >= ALARM_WINDOW_MIN;
+        var isSpike = minutes > 0 && minutes < IGNORE_SPIKES_MIN;
+
+        var statusClass = 'ok';
+        var statusText = '✅ Normal';
+        if (r.temp == null) { statusClass = 'sensor'; statusText = '⚠️ Sensor?'; }
+        else if (isAlarm) { statusClass = 'alarm'; statusText = '🔴 Alarm'; }
+        else if (isSpike) { statusClass = 'ok'; statusText = '⏳ Spike (<10m)'; }
+
+        var tr = document.createElement('tr');
+        tr.className = statusClass;
+        tr.innerHTML =
+          '<td>' + r.id + '</td>' +
+          '<td>' + r.name + '</td>' +
+          '<td>' + formatTemp(r.temp) + '</td>' +
+          '<td class="tag ' + statusClass + '">' + statusText + '</td>' +
+          '<td>' + (isFinite(minutes) ? minutes : '∞') + '</td>';
+        tbody.appendChild(tr);
+      });
+    }
+
+    async function tick(){
+      var lastEl = document.getElementById('lastUpdate');
+      var hist = trimHistory(loadHistory());
+      try {
+        var resp = await fetch(DATA_URL, { cache: 'no-store' });
+        if (!resp.ok) throw new Error('HTTP ' + resp.status);
+        var text = await resp.text();
+        var xml = new DOMParser().parseFromString(text, 'application/xml');
+        var rows = parseXMLToRecords(xml);
+        rows.forEach(function(r){ upsertReading(hist, r.id, r.temp); });
+        saveHistory(hist);
+        render(rows, hist);
+        lastEl.textContent = 'Обновлено: ' + new Date().toLocaleString();
+      } catch (e) {
+        lastEl.textContent = 'Ошибка обновления: ' + e.message;
+      }
+    }
+
+    tick();
+    setInterval(tick, POLL_MS);
+
+    document.getElementById('release').textContent = 'Last release: 2025-09-11 22:09';
   </script>
 </body>
 </html>
